kubernetes/apps/media/qbittorrent-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: media
  annotations:
    glance/url: ""
    glance/icon: si:qbittorrent
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
      annotations:
        reloader.stakater.com/auto: "true"
    spec:
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:5.2.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: webui
          volumeMounts:
            - name: data
              mountPath: /config
              subPath: qbittorrent-config
            - name: data
              mountPath: /downloads
              subPath: media
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: media-data
        - name: tun
          hostPath:
            path: /dev/net/tun
